# genome_lens

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  docker-compose.dev.yml  docker-compose.prod.yml  package.json  pnpm-lock.yaml
backend/: .env.example  .gitignore  Dockerfile  README.md  entrypoint.dev.sh  entrypoint.sh  pyproject.toml
backend/app/: config.py  crud.py  database.py  logging_config.py  main.py  models.py  schemas.py  seed.py
backend/app/routers/: differential.py  expression.py  genes.py
backend/tests/: conftest.py  test_differential.py  test_gene_detail.py  test_gene_list.py  test_health.py  test_meta.py
frontend/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  index.html  nginx.conf  package.json  pnpm-lock.yaml  rspack.config.ts  skills-lock.json  tsconfig.json
frontend/src/: App.tsx  main.tsx  react-env.d.ts
frontend/src/components/: MyStart.module.css  MyStart.tsx
frontend/src/components/DetailPanel/: DetailPanel.tsx
frontend/src/components/DetailPanel/tabs/: DifferentialTab.tsx  GenomicTab.tsx  (+4 more)
frontend/src/components/GeneTable/: GeneTable.module.css  GeneTable.module.css.d.ts  GeneTable.tsx  GeneTableToolbar.tsx  columns.tsx
frontend/src/components/Layout/: Layout.module.css  Layout.module.css.d.ts  Layout.tsx
frontend/src/components/Navbar/: Navbar.module.css  Navbar.tsx
frontend/src/components/ui/: BiotypeTag.tsx  ChromosomeTag.tsx
frontend/src/store/: genesSlice.ts  hook.ts  index.ts
frontend/src/store/api/: genomelens.ts  mygene.ts
frontend/src/types/: gene.ts
(+4 files in other folders)
